--- a/xaml/Controls/Buttons.xaml
+++ b/xaml/Controls/Buttons.xaml
@@ -20,12 +20,12 @@
           <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
               <TextBlock Name="installText" 
               Text="{Binding Install, TargetNullValue=Install}" 
-              Foreground="White" 
+              Foreground="{DynamicResource TextColorSecondaryColor}" 
               Margin="0" 
               VerticalAlignment="Center"/>
               <TextBlock Name="installIcon"
               Text=" &#xE930;" 
-              Foreground="White" 
+              Foreground="{DynamicResource TextColorSecondaryColor}" 
               FontFamily="Segoe MDL2 Assets" 
               FontSize="14" 
               HorizontalAlignment="Center"
