--- a/static/Themes/Styles.xaml
+++ b/static/Themes/Styles.xaml
@@ -69,7 +69,7 @@
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="True">
                 <Setter Property="Background" Value="{DynamicResource HighlightColor}"/>
-                <Setter Property="Foreground" Value="{DynamicResource PrimaryButtonHighlight}"/>
+                <Setter Property="Foreground" Value="{DynamicResource HighlightColor}"/>
                 <Setter Property="BorderBrush" Value="{DynamicResource HighlightColor}"/>
             </Trigger>
             <Trigger Property="IsPressed" Value="True">
