--- a/themes/Dark.xaml
+++ b/themes/Dark.xaml
@@ -11,7 +11,7 @@
  <SolidColorBrush x:Key="BorderBrush" Color="#2b2d31" />
  <SolidColorBrush x:Key="ButtonBorderColor" Color="#1DB954"/>
  <SolidColorBrush x:Key="Label" Color="#3f3f3f"/>
- <SolidColorBrush x:Key="HighlightColor" Color="#066ca1"/>
+ <SolidColorBrush x:Key="HighlightColor" Color="CornflowerBlue"/>
  <SolidColorBrush x:Key="ToggleSwitchBackgroundColor" Color="#282828"/>
  <SolidColorBrush x:Key="ToggleSwitchForegroundColor" Color="#282828"/>
  <SolidColorBrush x:Key="ToggleSwitchEnableColor" Color="white"/>
@@ -19,7 +19,7 @@
  <SolidColorBrush x:Key="ToggleSwitchBorderBrush" Color="#c9c9c7"/>
  <Color x:Key="ListViewCardLeftColor">#3c3f44</Color> 
  <Color x:Key="ListViewCardRightColor">#2b2d31</Color>
- <SolidColorBrush x:Key="logo" Color="#098fd4"/>
+ <SolidColorBrush x:Key="logo" Color="CornflowerBlue"/>
  <ImageBrush x:Key="BackgroundImage" ImageSource="{x:Null}" Stretch="UniformToFill"/>
 </ResourceDictionary>
 <!--{Dark}-->
