--- a/themes/DarkKnight.xaml
+++ b/themes/DarkKnight.xaml
@@ -11,7 +11,7 @@
   <SolidColorBrush x:Key="BorderBrush" Color="#2b2d31" />
   <SolidColorBrush x:Key="ButtonBorderColor" Color="#1DB954"/>
   <SolidColorBrush x:Key="Label" Color="#3f3f3f"/>
-  <SolidColorBrush x:Key="HighlightColor" Color="#066ca1"/>
+  <SolidColorBrush x:Key="HighlightColor" Color="CornflowerBlue"/>
   <SolidColorBrush x:Key="ToggleSwitchBackgroundColor" Color="#282828"/>
   <SolidColorBrush x:Key="ToggleSwitchForegroundColor" Color="#282828"/>
   <SolidColorBrush x:Key="ToggleSwitchEnableColor" Color="white"/>
@@ -19,7 +19,7 @@
   <SolidColorBrush x:Key="ToggleSwitchBorderBrush" Color="#c9c9c7"/>
   <Color x:Key="ListViewCardLeftColor">#E117181D</Color> 
   <Color x:Key="ListViewCardRightColor">#E117181D</Color>
- <SolidColorBrush x:Key="logo" Color="#066ca1"/>
+  <SolidColorBrush x:Key="logo" Color="CornflowerBlue"/>
   <ImageBrush x:Key="BackgroundImage" ImageSource="https://images.hdqwalls.com/wallpapers/the-batman-fan-made-4k-xx.jpg" Stretch="UniformToFill"/>
 </ResourceDictionary>
 <!-- Name {Dark Knight} -->
