--- a/themes/Palestine.xaml
+++ b/themes/Palestine.xaml
@@ -1,25 +1,26 @@
 <!-- {Palestine} -->
 <!-- by {emadadel} -->
 <ResourceDictionary x:Key="Palestine">
- <SolidColorBrush x:Key="PrimaryBackgroundColor" Color="#FF1F1F1F"/>
- <SolidColorBrush x:Key="SecondaryPrimaryBackgroundColor" Color="#2C211A"/>
- <SolidColorBrush x:Key="PrimaryButtonForeground" Color="#FFB80000" />
- <SolidColorBrush x:Key="PrimaryButtonHighlight" Color="White" />
- <SolidColorBrush x:Key="TextColorPrimary" Color="WhiteSmoke" />
- <SolidColorBrush x:Key="TextColorSecondaryColor" Color="White"/>
- <SolidColorBrush x:Key="TextColorSecondaryColor2" Color="#bbbbbb"/>
- <SolidColorBrush x:Key="BorderBrush" Color="#2b2d31" />
- <SolidColorBrush x:Key="ButtonBorderColor" Color="#1DB954"/>
- <SolidColorBrush x:Key="Label" Color="#3f3f3f"/>
- <SolidColorBrush x:Key="HighlightColor" Color="#FFD10D0D"/>
- <SolidColorBrush x:Key="ToggleSwitchBackgroundColor" Color="#282828"/>
- <SolidColorBrush x:Key="ToggleSwitchForegroundColor" Color="#282828"/>
- <SolidColorBrush x:Key="ToggleSwitchEnableColor" Color="white"/>
- <SolidColorBrush x:Key="ToggleSwitchDisableColor" Color="#c9c9c7"/>
- <SolidColorBrush x:Key="ToggleSwitchBorderBrush" Color="#c9c9c7"/>
- <Color x:Key="ListViewCardLeftColor">#D82C211A</Color> 
- <Color x:Key="ListViewCardRightColor">#D82C211A</Color>
- <SolidColorBrush x:Key="logo" Color="red"/>
- <ImageBrush x:Key="BackgroundImage" ImageSource="https://w.wallhaven.cc/full/we/wallhaven-wegrj6.jpg" Stretch="UniformToFill"/>
+<SolidColorBrush x:Key="PrimaryBackgroundColor" Color="#FF1F1F1F"/>
+<SolidColorBrush x:Key="SecondaryPrimaryBackgroundColor" Color="#2C211A"/>
+<SolidColorBrush x:Key="PrimaryButtonForeground" Color="#FFB80000" />
+<SolidColorBrush x:Key="PrimaryButtonHighlight" Color="White" />
+<SolidColorBrush x:Key="TextColorPrimary" Color="WhiteSmoke" />
+<SolidColorBrush x:Key="TextColorSecondaryColor" Color="White"/>
+<SolidColorBrush x:Key="TextColorSecondaryColor2" Color="#bbbbbb"/>
+<SolidColorBrush x:Key="BorderBrush" Color="#2b2d31" />
+<SolidColorBrush x:Key="ButtonBorderColor" Color="#1DB954"/>
+<SolidColorBrush x:Key="Label" Color="#3f3f3f"/>
+<SolidColorBrush x:Key="HighlightColor" Color="#FFD10D0D"/>
+<SolidColorBrush x:Key="ToggleSwitchBackgroundColor" Color="#282828"/>
+<SolidColorBrush x:Key="ToggleSwitchForegroundColor" Color="#282828"/>
+<SolidColorBrush x:Key="ToggleSwitchEnableColor" Color="white"/>
+<SolidColorBrush x:Key="ToggleSwitchDisableColor" Color="#c9c9c7"/>
+<SolidColorBrush x:Key="ToggleSwitchBorderBrush" Color="#c9c9c7"/>
+<Color x:Key="ListViewCardLeftColor">#D82C211A</Color> 
+<Color x:Key="ListViewCardRightColor">#D82C211A</Color>
+<SolidColorBrush x:Key="logo" Color="red"/>
+<ImageBrush x:Key="BackgroundImage" ImageSource="https://w.wallhaven.cc/full/we/wallhaven-wegrj6.jpg" Stretch="UniformToFill"/>
+<x:String x:Key="SubText">#StandWithPalestine</x:String>
 </ResourceDictionary>
 <!-- Name {Palestine} -->
