--- a/themes/Light.xaml
+++ b/themes/Light.xaml
@@ -21,5 +21,6 @@
  <Color x:Key="ListViewCardRightColor">#ffffff</Color>
  <SolidColorBrush x:Key="logo" Color="black"/>
  <ImageBrush x:Key="BackgroundImage" ImageSource="{x:Null}" Stretch="UniformToFill"/>
+ <x:String x:Key="SubText">Install Tweaks Tool</x:String>
 </ResourceDictionary>
 <!-- {Light} -->
