--- a/xaml/Controls/Tabs.xaml
+++ b/xaml/Controls/Tabs.xaml
@@ -1,16 +1,15 @@
 <!--TabControl-->
     <TabControl Name="taps" TabStripPlacement="Left" Grid.Row="1" BorderBrush="Transparent" Foreground="White" Background="Transparent">
+
             <TabItem Name="apps" Header="{Binding apps, TargetNullValue=Apps}" BorderBrush="{x:Null}" >
                 <TabItem.HeaderTemplate>
                     <DataTemplate>
                         <StackPanel Orientation="Vertical" >
-                            <TextBlock Text="" FontFamily="Segoe MDL2 Assets" FontSize="18" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                            <TextBlock Text="📦"  FontSize="18" VerticalAlignment="Center" HorizontalAlignment="Center"/>
                             <TextBlock Text="{Binding}" VerticalAlignment="Center" HorizontalAlignment="Center" TextWrapping="Wrap" Margin="0,5,0,0"/>
                         </StackPanel>
                     </DataTemplate>
             </TabItem.HeaderTemplate>
-            
-         
                 <ListView Name="appslist" 
                     Grid.Row="1" 
                     BorderBrush="{x:Null}" 
@@ -33,11 +32,12 @@
                 </ListView>
 
             </TabItem>
+
             <TabItem x:Name="tweeksTab" Header="{Binding tweaks, TargetNullValue=Tweaks}" BorderBrush="{x:Null}" Background="{x:Null}">
                 <TabItem.HeaderTemplate>
                         <DataTemplate>
                             <StackPanel Orientation="Vertical">
-                                <TextBlock Text="" FontFamily="Segoe MDL2 Assets" VerticalAlignment="Center" HorizontalAlignment="Center"  FontSize="18"/>
+                                <TextBlock Text="🛠"  VerticalAlignment="Center" HorizontalAlignment="Center"  FontSize="18"/>
                                 <TextBlock Text="{Binding}" VerticalAlignment="Center" HorizontalAlignment="Center"  TextWrapping="Wrap" Margin="0,5,0,0"/>
                             </StackPanel>
                         </DataTemplate>
@@ -59,11 +59,12 @@
                         {{Tweaks}}
                     </ListView>
             </TabItem>
+
             <TabItem x:Name="SettingsTab" Header="{Binding settings, TargetNullValue=Settings}" BorderBrush="{x:Null}" Background="{x:Null}">
                 <TabItem.HeaderTemplate>
                         <DataTemplate>
                             <StackPanel Orientation="Vertical">
-                                <TextBlock Text="" FontFamily="Segoe MDL2 Assets" VerticalAlignment="Center" HorizontalAlignment="Center"  FontSize="18"/>
+                                <TextBlock Text="⚙" VerticalAlignment="Center" HorizontalAlignment="Center"  FontSize="18"/>
                                 <TextBlock Text="{Binding}" VerticalAlignment="Center" HorizontalAlignment="Center" TextWrapping="Wrap" Margin="0,5,0,0"/>
                             </StackPanel>
                         </DataTemplate>
@@ -85,5 +86,6 @@
                         {{Settings}}
                     </ListView>
             </TabItem>
+
     </TabControl>
 <!--End TabControl-->
