--- a/xaml/Controls/Menu.xaml
+++ b/xaml/Controls/Menu.xaml
@@ -16,7 +16,7 @@
                 <Binding Path="Management" TargetNullValue="Management"/>
             </MenuItem.Header>
             <MenuItem.Icon>
-                <TextBlock FontSize="15" Text="💻"/>
+                <TextBlock FontFamily="Segoe MDL2 Assets" FontSize="15" Text=""/>
             </MenuItem.Icon>
 
             <MenuItem Name="sysinfo">
@@ -129,7 +129,7 @@
                 <Binding Path="Preferences" TargetNullValue="Preferences"/>
             </MenuItem.Header>
             <MenuItem.Icon>
-                <TextBlock FontSize="15" FontFamily="Segoe MDL2 Assets"  HorizontalAlignment="Center" VerticalAlignment="Center" Text=""/>
+                 <TextBlock FontFamily="Segoe MDL2 Assets" FontSize="15" Text=""/>
             </MenuItem.Icon>
 
             <MenuItem Name="restorepoint" InputGestureText="Shift+Q">
@@ -270,7 +270,7 @@
                 <Binding Path="Third_party" TargetNullValue="Third Party"/>
             </MenuItem.Header>
             <MenuItem.Icon>
-                <TextBlock  FontSize="15" Text="🔗"/>
+                <TextBlock FontFamily="Segoe MDL2 Assets" FontSize="15" Text=""/>
             </MenuItem.Icon>
 
             <MenuItem Name="mas" ToolTip="Windows activation ">
@@ -346,7 +346,6 @@
                     </MenuItem.Header>
                 </MenuItem>
             </MenuItem>
-            
 
             <MenuItem Name="sordum" ToolTip="Collection of free utilities designed to enhance or control various aspects of the Windows operating system" Header="Sordum tools">
                 <MenuItem.Icon>
@@ -397,7 +396,7 @@
                 <Binding Path="About" TargetNullValue="About"/>
             </MenuItem.Header>
             <MenuItem.Icon>
-                <TextBlock  FontSize="15" Text="👤"/>
+                <TextBlock FontFamily="Segoe MDL2 Assets" FontSize="15" Text=""/>
             </MenuItem.Icon>
         </MenuItem>
 
