--- a/static/Themes/Styles.xaml
+++ b/static/Themes/Styles.xaml
@@ -57,7 +57,7 @@
 
 <!--ListViewItem Style-->
     <Style TargetType="ListViewItem">
-        <Setter Property="Margin" Value="5 5 5 0"/>
+        <Setter Property="Margin" Value="0 5 0 0"/>
         <Setter Property="BorderThickness" Value="0.5"/>
         <Setter Property="BorderBrush" Value="DarkGray"/>
         <Setter Property="Padding" Value="0"/>
@@ -94,16 +94,16 @@
         <Setter Property="Foreground" Value="{DynamicResource TextColorSecondaryColor}"/>
         <Setter Property="Margin" Value="0"/>
         <Setter Property="Padding" Value="6"/>
-        <Setter Property="BorderThickness" Value="1.5"/>
-        <Setter Property="BorderBrush" Value="{DynamicResource PrimaryButtonForeground}"/>
+        <Setter Property="BorderThickness" Value="1.2"/>
+        <Setter Property="BorderBrush" Value="{DynamicResource TextColorSecondaryColor}"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="CheckBox">
                     <StackPanel Orientation="Horizontal">
                         <!-- Checkbox box -->
-                        <Border Name="CheckRadius" Width="18" Height="18" BorderBrush="{TemplateBinding BorderBrush}" CornerRadius="20" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}">
+                        <Border Name="CheckRadius" Width="17" Height="17" BorderBrush="{TemplateBinding BorderBrush}" CornerRadius="2" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}">
                             <!-- Checkmark arrow inside the box -->
-                            <Path x:Name="CheckMark" Width="13" Height="13" Stretch="Uniform" Stroke="WhiteSmoke" StrokeThickness="3" Data="M 0 5 L 4 8 L 10 0" Visibility="Collapsed"/>
+                            <Path x:Name="CheckMark" Width="13" Height="13" Stretch="Uniform" Stroke="WhiteSmoke" StrokeThickness="3.2" Data="M 0 5 L 4 8 L 10 0" Visibility="Collapsed"/>
                         </Border>
                         <!-- Content beside the checkbox -->
                         <ContentPresenter Margin="8,0,0,0" VerticalAlignment="Center"/>
