--- a/xaml/Controls/Buttons.xaml
+++ b/xaml/Controls/Buttons.xaml
@@ -43,7 +43,7 @@
   <!-- Statusbar -->
     <Grid Column="0">
         <TextBlock Name="statusbar"
-          Text="#StandWithPalestine"
+          Text="✊ #StandWithPalestine"
           HorizontalAlignment="Left"
           VerticalAlignment="Center" 
           TextWrapping="Wrap"
